--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereum-remix",
-  "version": "0.0.2-alpha.0.0.4",
+  "version": "0.0.2-alpha.0.0.5",
   "description": "Ethereum IDE and tools for the web",
   "contributors": [
     {
@@ -13,17 +13,16 @@
     }
   ],
   "main": "./src/index.js",
-  "dependencies": {
-    "browserify": "^13.0.1",
-    "web3": "^0.15.3",
-    "yo-yo": "^1.2.1"
-  },
   "devDependencies": {
+    "browserify": "^13.0.1",
+    "ethereumjs-util": "^4.5.0",
     "http-server": "^0.9.0",
     "nightwatch": "^0.9.5",
     "standard": "^7.0.1",
     "standard-reporter": "^1.0.5",
     "tape": "^4.6.0",
+    "web3": "^0.15.3",
+    "yo-yo": "^1.2.1",
     "yo-yoify": "^3.1.0"
   },
   "scripts": {
